# dotfiles

./: .Xresources  .gitconfig  .gitignore  .gitmodules  .tmux.conf  .vimrc  .zshrc  README.md  openvpn-root.tar.gz.asc  pkglist-pacman.txt  pkglist-yay.txt  setup-compton.sh  setup.sh  setup_root.sh  taskbook.tar.gz.asc  xorg.conf
.config/: compton.conf
.config/conky/: conky.conf  cputemp.sh
.config/i3/: config
.config/nvim/: coc-settings.json
.config/polybar/: config  launch.sh
.config/ranger/: bookmarks  history
.oh-my-zsh/custom/: aliases.zsh  initialize.zsh
.oh-my-zsh/custom/completions/: _lab
asdf/: .tool-versions
bash/: .bashrc
config/: .gdbinit  .gdbinit.local
config/.config/alacritty/: alacritty.toml  alacritty.yml
config/.config/autostart/: conky-mail.desktop  jetbrains-toolbox.desktop  nm-applet.desktop
config/.config/conky/: conky-mail.conf  conky.conf  cputemp.sh  filesystem.sh  notmuch.sh  (+1 more)
envs/conda/: README.md  environment.yml
git/: .gitconfig  .themes.gitconfig
gnupg/.gnupg/: cleanup.sh  gpg-agent.conf  gpg.conf
k9s/.k9s/: config.yml  skin.yml
pacman/: backup.sh  mirrorlist  pkglist-pacman.txt  pkglist-yay.txt  restore.sh
scripts/: backup-rsync.sh  backup-secret.sh  backup.sh  restore-secret.sh  setup-ubuntu.sh  tar-taskbook.sh
scripts/python/: system.requirements.txt  user.requirements.txt
tmux/: .tmux.conf
vim/: .vimrc
vim/.config/nvim/python3/: Pipfile  pyproject.toml
vim/.vim/: colors.vim
xorg/: .Xresources  .xprofile
xorg/xorg.conf.d/: 10-modules.conf  70-mouse-keyboard.conf
zsh/: .p10k.zsh  .zshrc
(+134 files in other folders)
